# Franke

./: .gitignore  CLAUDE.md  README.md  docker-compose.public.yml  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
app/: .env.production  index.html  package.json  vite.config.ts
app/src/: collab.ts  comments-editor.ts  comments.ts  config.ts  crypto.ts  editor-commands.ts  editor-menu.ts  encrypted-provider.ts  live-markdown.ts  main.ts  mentions.ts  style.css  suggestions-editor.ts  suggestions.ts  vault.ts  versions.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
relay/: Caddyfile  Dockerfile  mirror-sync.py  package.json  server.js
